# rust-modules

./: README.md
RTIMULib2/Linux/rtimu-rust/: Cargo.toml
RTIMULib2/Linux/rtimu-rust/src/: main.rs
RTIMULib2/Linux/rust/: Cargo.toml  README.md  build.rs  readme.md  wrapper.hpp
egui_rust_app/: Cargo.toml
egui_rust_app/assets/: sw.js
egui_rust_app/src/: main.rs
fft-freq-rust/: Cargo.toml
fft-freq-rust/src/: main.rs
gpsd-client-rust/: Cargo.toml
gpsd-client-rust/src/: main.rs
lightning-detect/: Cargo.toml  README.md
lightning-detect/src/: main.rs
lowpass-butterworth-rust/: Cargo.toml
lowpass-butterworth-rust/src/: main.rs
magnetic-rust/: Cargo.toml
magnetic-rust/src/: main.rs
notify-and-alert/: Cargo.toml
notify-and-alert/src/: main.rs
plot-rust/: Cargo.toml
plot-rust/src/: main.rs
rust-i2c-db/: Cargo.toml
rust-i2c-db/src/: main.rs
rust-i2c-scan/: Cargo.toml  README.md
rust-i2c-scan/src/: main.rs
