[package]
name = "gpsd-client-rust"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpsd_proto = "0.7.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
log = "0.4.17"
futures = "0.3.25"
futures-util = { version = "0.3.25" }
env_logger = "0.10.0"
serde = "1.0.151"
serde_json = "1.0.91"

